bug of main slide on index html solved removing overflow style

--- a/css/main.css
+++ b/css/main.css
@@ -2548,7 +2548,6 @@ html[xmlns] .slides {
   width: 70px;
   height: 100%;
   /*margin: -20px 0 0;*/
-  position: absolute;
   /*top: 50%;*/
   z-index: 10;
   overflow: hidden;
